--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RH - Интернет-магазин обуви</title>
+    <meta name="yandex-verification" content="aa4e530de2d22f3d" />
     <meta name="description" content="Интернет-магазин модной обуви: кроссовки Nike, Jordan и другие. Бесплатная доставка по всей стране.">
     
     <!-- Open Graph / Facebook -->
@@ -112,7 +113,7 @@
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
                       <img src="img/монархи.JPG" class="card-img-top" alt="Кроссовки для повседневной носки" itemprop="image">
                       <div class="card-body">
-                          <h5 class="card-title" itemprop="name">Для повседневной</h5>
+                          <h5 class="card-title" itemprop="name">нет повседневной</h5>
                           <p class="card-text" itemprop="description">Серия обуви производства Nike, предназначенная для повседневного использования.</p>
                           <a href="#" class="btn btn-primary" itemprop="url">Подробнее</a>
                       </div>
