--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
                       <img src="img/jordan 13.JPG" class="card-img-top" alt="Баскетбольные кроссовки Jordan" itemprop="image">
                       <div class="card-body">
-                          <h5 class="card-title" itemprop="name">Для спорта- баскетбола</h5>
+                          <h5 class="card-title" itemprop="name">Нля спорта- баскетбола</h5>
                           <p class="card-text" itemprop="description">Профессиональные баскетбольные кроссовки серии Jordan.</p>
                           <a href="#" class="btn btn-primary" itemprop="url">Подробнее</a>
                       </div>
