--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
                       <img src="img/найк 90.JPG" class="card-img-top" alt="Кроссовки для спорта и повседневной носки" itemprop="image">
                       <div class="card-body">
-                          <h5 class="card-title" itemprop="name">Нля спортивной-повседневной</h5>
+                          <h5 class="card-title" itemprop="name">Нля кто спортивной-повседневной</h5>
                           <p class="card-text" itemprop="description">Универсальные кроссовки для спорта и повседневной носки.</p>
                           <a href="#" class="btn btn-primary" itemprop="url">Подробнее</a>
                       </div>
