--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    <!-- Остальное тело документа без изменений -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
