--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
                       <img src="img/монархи.JPG" class="card-img-top" alt="Кроссовки для повседневной носки" itemprop="image">
                       <div class="card-body">
-                          <h5 class="card-title" itemprop="name">нет повседневной</h5>
+                          <h5 class="card-title" itemprop="name">Для повседневной</h5>
                           <p class="card-text" itemprop="description">Серия обуви производства Nike, предназначенная для повседневного использования.</p>
                           <a href="#" class="btn btn-primary" itemprop="url">Подробнее</a>
                       </div>
@@ -125,7 +125,7 @@
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
                       <img src="img/найк 90.JPG" class="card-img-top" alt="Кроссовки для спорта и повседневной носки" itemprop="image">
                       <div class="card-body">
-                          <h5 class="card-title" itemprop="name">Нля кто спортивной-повседневной</h5>
+                          <h5 class="card-title" itemprop="name">Для спортивной-повседневной</h5>
                           <p class="card-text" itemprop="description">Универсальные кроссовки для спорта и повседневной носки.</p>
                           <a href="#" class="btn btn-primary" itemprop="url">Подробнее</a>
                       </div>
@@ -136,7 +136,7 @@
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
                       <img src="img/jordan 13.JPG" class="card-img-top" alt="Баскетбольные кроссовки Jordan" itemprop="image">
                       <div class="card-body">
-                          <h5 class="card-title" itemprop="name">Нля спорта- баскетбола</h5>
+                          <h5 class="card-title" itemprop="name">Для спорта- баскетбола</h5>
                           <p class="card-text" itemprop="description">Профессиональные баскетбольные кроссовки серии Jordan.</p>
                           <a href="#" class="btn btn-primary" itemprop="url">Подробнее</a>
                       </div>
