--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       
               <div class="col-md-4">
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
-                      <img src="img/найк 90.JPG" class="card-img-top" alt="Кроссовки для спорта и повседневной носки" itemprop="image" loading="lazy">
+                      <img src="https://yandex.ru/images/search?from=tabbar&img_url=https%3A%2F%2Fcdn.shopify.com%2Fs%2Ffiles%2F1%2F1031%2F1489%2Fproducts%2Fnike-wmns-air-max-90-schwarz-cq2560-002-2.jpg%3Fv%3D1585004680&lr=2&pos=2&rpt=simage&text=%D0%BD%D0%B0%D0%B9%D0%BA%2090" class="card-img-top" alt="Кроссовки для спорта и повседневной носки" itemprop="image" loading="lazy">
                       <div class="card-body">
                           <h5 class="card-title" itemprop="name">Для спортивной-повседневной</h5>
                           <p class="card-text" itemprop="description">Универсальные кроссовки для спорта и повседневной носки.</p>
