--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="row">
               <div class="col-md-4">
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
-                      <img src="img/монархи.JPG" class="card-img-top" alt="Кроссовки для повседневной носки" itemprop="image" loading="lazy">
+                      <img src="https://avatars.mds.yandex.net/get-mpic/5207439/img_id400254045175304238.jpeg/orig" class="card-img-top" alt="Кроссовки для повседневной носки" itemprop="image" loading="lazy">
                       <div class="card-body">
                           <h5 class="card-title" itemprop="name">Для повседневной</h5>
                           <p class="card-text" itemprop="description">Серия обуви производства Nike, предназначенная для повседневного использования.</p>
@@ -130,7 +130,7 @@
       
               <div class="col-md-4">
                   <div class="card" style="width: 18rem;" itemscope itemtype="https://schema.org/Product">
-                      <img src="img/jordan 13.JPG" class="card-img-top" alt="Баскетбольные кроссовки Jordan" itemprop="image" loading="lazy">
+                      <img src="https://pushkino.kross-sport.ru/upload/iblock/604/jd167ve7ql7lynr1f8jgl36vo2q5g71w.jpg" class="card-img-top" alt="Баскетбольные кроссовки Jordan" itemprop="image" loading="lazy">
                       <div class="card-body">
                           <h5 class="card-title" itemprop="name">Для спорта- баскетбола</h5>
                           <p class="card-text" itemprop="description">Профессиональные баскетбольные кроссовки серии Jordan.</p>
