--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/jordan1.jpeg" class="d-block w-100" alt="Кроссовки Jordan" loading="lazy">
+            <img src="https://psv4.userapi.com/s/v1/d/3oj32oRmUhVPtUk9zX6ycPO0jJbJiBKjTEXvuPd8knvxjwtRonbDzvxv7ZWftd55FZSWc9FBlsHxPEsgBSE_GibEtwIXxW-P2Ixtfwp3icopSV_rKGg2qQ/jordan3.jpg" class="d-block w-100" alt="Кроссовки Jordan" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="img/jordan2.png" class="d-block w-100" alt="Кроссовки Jordan серии 2" loading="lazy">
+            <img src="https://psv4.userapi.com/s/v1/d/k4SFHkiGxilzu9jlbEyaD4WFxyr01BNo2_3fcuoex_1FaKu3jrR0kxyUp4EwGJYfAx3wYmiV7eMr4QR_Fxlf-KdG2cDbWJy54Yfuo_pXuOKmWpmEu4XJfA/jordan1.jpg" class="d-block w-100" alt="Кроссовки Jordan серии 2" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="img/jordan3.jpg" class="d-block w-100" alt="Кроссовки Jordan серии 3" loading="lazy">
+            <img src="https://psv4.userapi.com/s/v1/d/4KrB9aaInhPjgCLrXMAy9jBqvVaphzF_4mowPiAOTd7WjtWImH5K3t3-DIrGWgBsEyL0jVTWHspJr11H_XmHhnQwJeBS0lJ5RBLEBKqO9bbGgYmhXZLUtA/jordan2.png" class="d-block w-100" alt="Кроссовки Jordan серии 3" loading="lazy">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
